# GameEngine-SDL-SOUND_TEST

./: Notes.md  README.md  build.bat  build.sh
Engine/: CMakeLists.txt
Engine/include/app/: app.hpp
Engine/include/config/: resource_paths.hpp
Engine/include/inputs/: keyboard.hpp
Engine/include/renderer/: renderer.hpp
Engine/include/settings/: settings.hpp
Engine/include/shader/: shader.hpp
Engine/src/: main.cpp
Engine/src/app/: app.cpp
Engine/src/audio/: config.hpp  sound.cpp  sound.hpp  soundManager.cpp  soundManager.hpp  visualizer.cpp  visualizer.hpp
Engine/src/inputs/: keyboard.cpp
Engine/src/renderer/: renderer.cpp
Engine/src/settings/: settings.cpp
Engine/src/shader/: shader.cpp
recordings/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  8.txt  README.md  music_recording_20250414_015826.txt  music_recording_20250414_020123.txt  music_recording_20250414_020344.txt  music_recording_20250414_021642.txt  music_recording_20250414_025849.txt  music_recording_20250414_030343.txt  music_recording_20250414_033349.txt  music_recording_20250415_040709.txt  music_recording_20250415_092342.txt
resources/: keyboard_config.txt  video_settings.txt
resources/shaders/: triangle.shader
